--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -103,7 +103,13 @@
     <Compile Include="Exceptions\UnexpectedElementException.cs" />
     <Compile Include="Exceptions\XMLException.cs" />
     <Compile Include="menu\AddInContext.cs" />
+    <Compile Include="upcc3\ccts\ACCSpec.cs" />
+    <Compile Include="upcc3\ccts\ASCCSpec.cs" />
+    <Compile Include="upcc3\ccts\BCCSpec.cs" />
+    <Compile Include="upcc3\ccts\CCSpec.cs" />
     <Compile Include="upcc3\ccts\dra\IUpdateable.cs" />
+    <Compile Include="upcc3\ccts\ENUMSpec.cs" />
+    <Compile Include="upcc3\ccts\PRIMSpec.cs" />
     <Compile Include="upcc3\Wizards\ImporterWizardForm.cs">
       <SubType>Form</SubType>
     </Compile>
