--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -66,7 +66,10 @@
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryResourceHandler.cs" />
     <Compile Include="upcc3\Wizards\util\ResourceHandlerTest.cs" />
     <Compile Include="upcc3\XSDImporter\ccts\XSDImporterTest.cs" />
-    <Compile Include="Utils\EARepositoryCopierTest.cs" />
+    <Compile Include="Utils\EAAssert.cs" />
+    <Compile Include="Utils\PropertyEqualityAssertion.cs" />
+    <Compile Include="Utils\PropertyEqualityAssertionTest.cs" />
+    <Compile Include="Utils\RepositoryCopierTest.cs" />
     <Compile Include="TestUtils.cs" />
     <Compile Include="upcc3\ccts\dra\DRACCRepositoryTest.cs" />
     <Compile Include="upcc3\ccts\DynamicProxyTest.cs" />
