--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -114,7 +114,6 @@
     <Compile Include="upcc3\ccts\CCSpec.cs" />
     <Compile Include="upcc3\ccts\ConnectorSpec.cs" />
     <Compile Include="upcc3\ccts\dra\ElementLibrary.cs" />
-    <Compile Include="upcc3\ccts\dra\IUpdateable.cs" />
     <Compile Include="upcc3\ccts\ENUMSpec.cs" />
     <Compile Include="upcc3\ccts\IBLibrary.cs" />
     <Compile Include="upcc3\ccts\IElementLibrary.cs" />
@@ -161,6 +160,7 @@
     <Compile Include="upcc3\ccts\util\EADiagramExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EAElementExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EATaggedValueExtensions.cs" />
+    <Compile Include="upcc3\ccts\util\MultiPartTaggedValue.cs" />
     <Compile Include="upcc3\Importer\ACCImporter.cs" />
     <Compile Include="upcc3\NDR.cs" />
     <Compile Include="upcc3\Wizards\ImporterWizardForm.cs">
