--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -120,12 +120,10 @@
     <Compile Include="upcc3\ccts\otf\AbstractEAElement.cs" />
     <Compile Include="upcc3\ccts\otf\AbstractEAItem.cs" />
     <Compile Include="upcc3\ccts\otf\AbstractEAPackage.cs" />
-    <Compile Include="upcc3\ccts\otf\AbstractValidationIssue.cs" />
     <Compile Include="upcc3\ccts\otf\BDTLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\BIELibrary.cs" />
-    <Compile Include="upcc3\ccts\otf\BInformationV.cs" />
     <Compile Include="upcc3\ccts\otf\BLibrary.cs" />
-    <Compile Include="upcc3\ccts\otf\BLibraryConstraints.cs" />
+    <Compile Include="upcc3\ccts\otf\BLibraryValidator.cs" />
     <Compile Include="upcc3\ccts\otf\BusinessLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\CCItemWrapper.cs" />
     <Compile Include="upcc3\ccts\otf\CCLibrary.cs" />
@@ -135,20 +133,13 @@
     <Compile Include="upcc3\ccts\otf\IRepositoryItemData.cs" />
     <Compile Include="upcc3\ccts\otf\RepositoryContentLoader.cs" />
     <Compile Include="upcc3\ccts\otf\DOCLibrary.cs" />
-    <Compile Include="upcc3\ccts\otf\EAModel.cs" />
     <Compile Include="upcc3\ccts\otf\ElementLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\ENUMLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\IEAElement.cs" />
     <Compile Include="upcc3\ccts\otf\IEAItem.cs" />
     <Compile Include="upcc3\ccts\otf\IEAPackage.cs" />
-    <Compile Include="upcc3\ccts\otf\InvalidParentPackage.cs" />
-    <Compile Include="upcc3\ccts\otf\InvalidSubPackageStereotype.cs" />
     <Compile Include="upcc3\ccts\otf\IValidationIssue.cs" />
-    <Compile Include="upcc3\ccts\otf\LibraryMandatoryTaggedValueNotSpecified.cs" />
-    <Compile Include="upcc3\ccts\otf\LibraryNameNotSpecified.cs" />
-    <Compile Include="upcc3\ccts\otf\NoElementsAllowed.cs" />
     <Compile Include="upcc3\ccts\otf\OtherElement.cs" />
-    <Compile Include="upcc3\ccts\otf\OtherPackage.cs" />
     <Compile Include="upcc3\ccts\otf\PackageRoot.cs" />
     <Compile Include="upcc3\ccts\otf\PRIMLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\RepositoryItem.cs" />
