--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -79,21 +79,18 @@
     <Compile Include="TestRepository\IDFactory.cs" />
     <Compile Include="TestRepository\TemporaryFileBasedRepository.cs" />
     <Compile Include="upcc3\ccts\otf\AssertCollections.cs" />
-    <Compile Include="upcc3\ccts\otf\BLibraryConstraintsTests.cs" />
-    <Compile Include="upcc3\ccts\otf\ConstraintsTests.cs" />
-    <Compile Include="upcc3\ccts\otf\Given_a_CCItemWrapper.cs" />
-    <Compile Include="upcc3\ccts\otf\Given_a_HierarchicalRepository.cs" />
-    <Compile Include="upcc3\ccts\otf\Given_a_new_CCRepository.cs" />
-    <Compile Include="upcc3\ccts\otf\Given_a_Validator.cs" />
-    <Compile Include="upcc3\ccts\otf\Given_a_Validator_with_one_validated_item.cs" />
-    <Compile Include="upcc3\ccts\otf\PRIMLibraryConstraintsTests.cs" />
-    <Compile Include="upcc3\ccts\otf\RepositoryContentLoaderTest.cs" />
-    <Compile Include="upcc3\ccts\otf\TestElement.cs" />
-    <Compile Include="upcc3\ccts\otf\TestPackage.cs" />
+    <Compile Include="upcc3\ccts\otf\BLibraryValidatorTests.cs" />
+    <Compile Include="upcc3\ccts\otf\ValidatorTests.cs" />
+    <Compile Include="upcc3\ccts\otf\CCItemWrapperTests.cs" />
+    <Compile Include="upcc3\ccts\otf\HierarchicalRepositoryTests.cs" />
+    <Compile Include="upcc3\ccts\otf\CCRepositoryTests.cs" />
+    <Compile Include="upcc3\ccts\otf\ValidationServiceTests.cs" />
+    <Compile Include="upcc3\ccts\otf\ValidationServiceWithOneValidatedItemTests.cs" />
+    <Compile Include="upcc3\ccts\otf\ElementLibraryValidatorTests.cs" />
+    <Compile Include="upcc3\ccts\otf\RepositoryContentLoaderTests.cs" />
     <Compile Include="upcc3\ccts\otf\TestRepositoryItemData.cs" />
-    <Compile Include="upcc3\ccts\otf\TestValidationIssue.cs" />
-    <Compile Include="upcc3\ccts\otf\Given_a_bLibrary.cs" />
-    <Compile Include="upcc3\ccts\otf\ValidatingCCRepositoryIntegrationTest.cs" />
+    <Compile Include="upcc3\ccts\otf\MyTestRepositoryItemData.cs" />
+    <Compile Include="upcc3\ccts\otf\ValidatingCCRepositoryIntegrationTests.cs" />
     <Compile Include="upcc3\ccts\util\MultiPartTaggedValueTests.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryLibraryImporter.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryModelCreator.cs" />
