--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -123,14 +123,24 @@
     <Compile Include="upcc3\ccts\otf\BDTLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\BIELibrary.cs" />
     <Compile Include="upcc3\ccts\otf\BLibrary.cs" />
-    <Compile Include="upcc3\ccts\otf\BLibraryValidator.cs" />
     <Compile Include="upcc3\ccts\otf\BusinessLibrary.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\BusinessLibraryValidator.cs" />
     <Compile Include="upcc3\ccts\otf\CCItemWrapper.cs" />
     <Compile Include="upcc3\ccts\otf\CCLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\CDTLibrary.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\ConstraintBasedValidator.cs" />
+    <Compile Include="upcc3\ccts\otf\ConstraintViolation.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\ElementLibaryValidator.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\ElementMustHaveStereotype.cs" />
     <Compile Include="upcc3\ccts\otf\HierarchicalRepository.cs" />
+    <Compile Include="upcc3\ccts\otf\IConstraint.cs" />
     <Compile Include="upcc3\ccts\otf\IRepositoryItem.cs" />
     <Compile Include="upcc3\ccts\otf\IRepositoryItemData.cs" />
+    <Compile Include="upcc3\ccts\otf\IValidator.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\MustNotContainAnyElements.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\MustNotContainAnyPackages.cs" />
+    <Compile Include="upcc3\ccts\otf\NameMustNotBeEmpty.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\ParentPackageMustHaveStereotype.cs" />
     <Compile Include="upcc3\ccts\otf\RepositoryContentLoader.cs" />
     <Compile Include="upcc3\ccts\otf\DOCLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\ElementLibrary.cs" />
@@ -138,13 +148,19 @@
     <Compile Include="upcc3\ccts\otf\IEAElement.cs" />
     <Compile Include="upcc3\ccts\otf\IEAItem.cs" />
     <Compile Include="upcc3\ccts\otf\IEAPackage.cs" />
-    <Compile Include="upcc3\ccts\otf\IValidationIssue.cs" />
+    <Compile Include="upcc3\ccts\otf\ValidationIssue.cs" />
     <Compile Include="upcc3\ccts\otf\OtherElement.cs" />
     <Compile Include="upcc3\ccts\otf\PackageRoot.cs" />
     <Compile Include="upcc3\ccts\otf\PRIMLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\RepositoryItem.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\SafeConstraint.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\SafeValidator.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\SubPackagesMustBeBusinessLibraries.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\TaggedValueMustBeDefined.cs" />
     <Compile Include="upcc3\ccts\otf\ValidatingCCRepository.cs" />
     <Compile Include="upcc3\ccts\otf\ValidationService.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\BLibraryValidator.cs" />
+    <Compile Include="upcc3\ccts\otf\validators\constraints\ParentMustBeModelOrBInformationVOrBLibrary.cs" />
     <Compile Include="upcc3\ccts\PRIMSpec.cs" />
     <Compile Include="upcc3\ccts\util\EAAttributeExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EAConnectorExtensions.cs" />
